--- a/auth-service.properties
+++ b/auth-service.properties
@@ -13,4 +13,4 @@ info.app.version=1.0.0
 server.port=8081
 spring.boot.admin.client.url=http://localhost:8080
 management.endpoints.web.exposure.include=*
-# eureka.client.service-url.default-zone=http://localhost:8761/eureka
+eureka.client.service-url.default-zone=http://localhost:8761/eureka
