--- a/order-service.properties
+++ b/order-service.properties
@@ -1,12 +1,3 @@
-#spring.h2.console.enabled=true
-spring.datasource.url=jdbc:h2:mem:order_db
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-
 info.app.name=Order Service Application
 info.app.description=Order Service on spring boot application
 info.app.version=1.0.0
@@ -17,3 +8,11 @@ spring.boot.admin.client.url=http://localhost:8080
 management.endpoints.web.exposure.include=*
 spring.zipkin.baseUrl=http://localhost:9411
 spring.sleuth.sampler.probability=1.0
+
+spring.datasource.url=jdbc:mysql://192.168.99.101:3306/my_db
+spring.datasource.username=my_db
+spring.datasource.password=my_db
+spring.datasource.driver=com.mysql.jdbc.Driver
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
