--- a/zuul-server.properties
+++ b/zuul-server.properties
@@ -17,4 +17,4 @@ zuul.routes.auth-admin.service-id=auth-service
 
 zuul.routes.order-service.path=/order/**
 zuul.routes.order-service.service-id=order-service
-zuul.routes.order-service.strip-prefix=false
+# zuul.routes.order-service.strip-prefix=false
