--- a/promotion-service.properties
+++ b/promotion-service.properties
@@ -1,6 +1,18 @@
+info.app.name=Promotion Service Application
+info.app.description=Promotion Service on spring boot application
+info.app.version=1.0.0
+
 server.port=8083
-spring.application.name=promotion-service
 eureka.client.service-url.default-zone=http://localhost:8761/eureka
 spring.boot.admin.client.url=http://localhost:8080
+management.endpoints.web.exposure.include=*
 spring.zipkin.baseUrl=http://localhost:9411
 spring.sleuth.sampler.probability=1.0
+
+spring.datasource.url=jdbc:mysql://192.168.99.101:3306/my_db
+spring.datasource.username=my_db
+spring.datasource.password=my_db
+spring.datasource.driver=com.mysql.jdbc.Driver
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
